--- a/app/src/main/res/values/base_styles.xml
+++ b/app/src/main/res/values/base_styles.xml
@@ -381,7 +381,7 @@
         <item name="android:textColor">@color/selector_menu_item_text</item>
         <item name="android:background">@drawable/selector_menu_item_background</item>
         <item name="android:gravity">center_vertical|left</item>
-        <item name="android:padding">@dimen/pd_xsmall</item>
+        <item name="android:padding">@dimen/pd_xxsmall</item>
         <item name="android:paddingLeft">@dimen/menu_side_space</item>
         <item name="android:textStyle">bold</item>
     </style>
