--- a/app/src/main/res/layout/layout_date_gender.xml
+++ b/app/src/main/res/layout/layout_date_gender.xml
@@ -18,6 +18,7 @@
 
         <android.support.v7.widget.AppCompatSpinner
             android:id="@+id/edit_gender"
+            android:layout_marginRight="@dimen/pd_xnormal_m"
             style="@style/edit_profile"/>
     </LinearLayout>
 </layout>
