--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -1,83 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView android:id="@+id/scrollView"
-    style="@style/root.padding"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:fillViewport="true">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:mask="http://schemas.android.com/apk/res-auto"
+    style="@style/root"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:id="@+id/topContainer"
-        style="@style/linear">
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
 
-        <include layout="@layout/layout_auth_logo"/>
+    <ScrollView
+        android:id="@+id/scrollView"
+        style="@style/root.padding"
+        android:fillViewport="true">
 
-        <TextView
-            style="@style/header.green"
-            android:text="@string/elk_authorization"
-            android:visibility="gone"/>
+        <LinearLayout
+            android:id="@+id/topContainer"
+            style="@style/linear">
 
-        <!--<ru.mos.polls.maskedettext.MaskedEditText-->
-            <!--android:id="@+id/et_login"-->
+            <include
+                layout="@layout/layout_auth_logo"
+                android:visibility="gone" />
+
+            <TextView
+                style="@style/header.green"
+                android:text="@string/elk_authorization"
+                android:visibility="gone" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ru.mos.polls.maskedettext.MaskedEditText
+                    android:id="@+id/et_code_country"
+                    style="@style/input"
+                    android:layout_width="@dimen/vs_xsmall"
+                    android:layout_marginRight="@dimen/pd_normal"
+                    android:inputType="phone"
+                    mask:char_representation="#"
+                    mask:mask="+###" />
+
+                <ru.mos.polls.maskedettext.MaskedEditText
+                    android:id="@+id/etLogin"
+                    style="@style/input"
+                    android:inputType="phone"
+                    mask:char_representation="#"
+                    mask:mask="### ### ## ##"
+                    mask:mask_fill="-" />
+            </LinearLayout>
+
+            <!--<EditText-->
+            <!--android:id="@+id/etLogin"-->
             <!--style="@style/input.phone"-->
-            <!--mask:allowed_chars="1234567890"-->
-            <!--mask:mask="### ###-##-##"-->
             <!--android:hint="@string/ag_hint_phone_email"-->
-            <!--android:inputType="phone"-->
-            <!--android:imeOptions="actionNext"-->
-            <!--/>-->
-
-        <EditText
-            android:id="@+id/etLogin"
-            style="@style/input.phone"
-            android:hint="@string/ag_hint_phone_email"
-            android:imeOptions="actionNext" />
+            <!--android:imeOptions="actionNext" />-->
 
 
-        <EditText
-            android:id="@+id/etPassword"
-            style="@style/input.password"
-            android:hint="@string/elk_password"
-            android:visibility="gone"/>
+            <EditText
+                android:id="@+id/etPassword"
+                style="@style/input.password"
+                android:hint="@string/elk_password"
+                android:visibility="gone" />
 
-        <include layout="@layout/layout_offerta"/>
+            <include layout="@layout/layout_offerta" />
 
-        <TextView
-            android:id="@+id/tvError"
-            style="@style/text.center.red"
-            android:layout_margin="@dimen/pd_xxsmall"/>
+            <TextView
+                android:id="@+id/tvError"
+                style="@style/text.center.red"
+                android:layout_margin="@dimen/pd_xxsmall" />
 
-        <Button
-            android:id="@+id/btnSkip"
-            style="@style/not_used"/>
+            <Button
+                android:id="@+id/btnSkip"
+                style="@style/not_used" />
 
-        <Button
-            android:id="@+id/btnAction"
-            style="@style/button.centered.action"
-            android:layout_width="160dp"
-            android:text="@string/elk_authorize"/>
+            <Button
+                android:id="@+id/btnAction"
+                style="@style/button.centered.action"
+                android:layout_width="160dp"
+                android:text="@string/elk_authorize"
+                android:visibility="gone" />
 
-        <TextView
-            android:id="@+id/tvInfo"
-            style="@style/not_used"/>
+            <TextView
+                android:id="@+id/tvInfo"
+                style="@style/not_used" />
 
-        <Button
-            android:id="@+id/btnRegister"
-            style="@style/text.link.green"
-            android:layout_marginTop="@dimen/pd_xxlarge"
-            android:text="@string/elk_register"
-            android:visibility="gone"/>
+            <Button
+                android:id="@+id/btnRegister"
+                style="@style/text.link.green"
+                android:layout_marginTop="@dimen/pd_xxlarge"
+                android:text="@string/elk_register"
+                android:visibility="gone" />
 
-        <Button
-            android:id="@+id/btnRestorePassword"
-            style="@style/not_used"/>
+            <Button
+                android:id="@+id/btnRestorePassword"
+                style="@style/not_used" />
 
-        <include layout="@layout/layout_empty_view"/>
+            <include layout="@layout/layout_empty_view" />
 
-        <TextView
-            style="@style/text.link.green"
-            android:id="@+id/help"
-            android:layout_marginBottom="@dimen/pd_xxsmall"
-            android:layout_marginTop="@dimen/pd_xxlarge"
-            android:text="@string/help"/>
+            <TextView
+                android:id="@+id/help"
+                style="@style/text.link.green"
+                android:layout_marginBottom="@dimen/pd_xxsmall"
+                android:layout_marginTop="@dimen/pd_xxlarge"
+                android:text="@string/help" />
 
-    </LinearLayout>
-</ScrollView>
+        </LinearLayout>
+    </ScrollView>
+</LinearLayout>
