--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -11,8 +11,8 @@
     </declare-styleable>
     <declare-styleable name="SurveyTitleView">
         <attr name="contentChangingType" format="enum">
-            <enum name="simple" value="0"/>
-            <enum name="expand_collapse" value="1"/>
+            <enum name="simple" value="0" />
+            <enum name="expand_collapse" value="1" />
         </attr>
     </declare-styleable>
     <declare-styleable name="ChartsView">
@@ -26,8 +26,7 @@
     </declare-styleable>
     <declare-styleable name="MaskedEditText">
         <attr name="mask" format="string" />
-        <attr name="allowed_chars" format="string" />
-        <attr name="denied_chars" format="string" />
         <attr name="char_representation" format="string" />
+        <attr name="mask_fill" format="string" />
     </declare-styleable>
 </resources>
