--- a/app/src/main/res/layout/item_active_poll.xml
+++ b/app/src/main/res/layout/item_active_poll.xml
@@ -1,21 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/baseInfoContainer"
-              style="@style/linear"
-              xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_centerVertical="true"
-              android:padding="@dimen/pd_xxsmall">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:id="@+id/title"
-        style="@style/text.large.black"/>
+    <data>
 
-    <TextView
-        android:id="@+id/description"
-        style="@style/text.gray"/>
+        <variable
+            name="viewModel"
+            type="ru.mos.polls.model.Poll" />
+    </data>
 
-    <TextView
-        android:id="@+id/interrupted"
-        style="@style/text.red"
-        android:text="@string/interrupted"
-        android:visibility="gone"/>
-</LinearLayout>
+    <LinearLayout
+        android:id="@+id/baseInfoContainer"
+        style="@style/linear"
+        android:layout_centerVertical="true"
+        android:padding="@dimen/pd_xxsmall">
+
+        <TextView
+            android:id="@+id/title"
+            style="@style/text.large.black" />
+
+        <TextView
+            android:id="@+id/description"
+            style="@style/text.gray" />
+
+        <TextView
+            android:id="@+id/interrupted"
+            style="@style/text.red"
+            android:text="@string/interrupted"
+            android:visibility="gone" />
+    </LinearLayout>
+</layout>
