--- a/app/src/main/res/layout/fragment_achievement_tab_profile.xml
+++ b/app/src/main/res/layout/fragment_achievement_tab_profile.xml
@@ -5,10 +5,8 @@
 
         <variable
             name="viewModel"
-            type="ru.mos.polls.newprofile.vm.AchievementTabFragmentVM"/>
-
+            type="ru.mos.polls.newprofile.vm.AchievementTabFragmentVM" />
     </data>
-
 
     <RelativeLayout
         android:id="@+id/root"
@@ -18,7 +16,7 @@
             android:id="@+id/progress"
             style="@style/item"
             android:layout_centerInParent="true"
-            android:visibility="visible"/>
+            android:visibility="gone" />
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swipe"
@@ -26,10 +24,8 @@
 
 
             <android.support.v7.widget.RecyclerView
-                android:id="@+id/agUser_profile_list"
-                style="@style/item"
-                android:paddingLeft="@dimen/pd_xsmall"
-                android:paddingRight="@dimen/pd_xsmall"/>
+                android:id="@+id/list"
+                style="@style/root" />
         </android.support.v4.widget.SwipeRefreshLayout>
     </RelativeLayout>
 </layout>
