--- a/app/src/main/res/layout/fragment_tab_poll.xml
+++ b/app/src/main/res/layout/fragment_tab_poll.xml
@@ -2,13 +2,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
+
         <variable
             name="viewModel"
             type="ru.mos.polls.newpoll.vm.PollTabFragmentVM" />
     </data>
 
-    <RelativeLayout
-        style="@style/root">
+    <RelativeLayout style="@style/root">
 
         <ProgressBar
             android:id="@+id/progress"
@@ -29,9 +29,6 @@
                     style="@style/root" />
 
             </android.support.v4.widget.SwipeRefreshLayout>
-
         </RelativeLayout>
-
     </RelativeLayout>
-
 </layout>
