рефаткоринг экрана голосований

--- a/app/src/main/res/layout/item_active_poll.xml
+++ b/app/src/main/res/layout/item_active_poll.xml
@@ -10,7 +10,7 @@
 
     <LinearLayout
         android:id="@+id/baseInfoContainer"
-        style="@style/linear"
+        style="@style/item.linear"
         android:layout_centerVertical="true"
         android:padding="@dimen/pd_xxsmall">
 
