--- a/app/src/main/res/layout/item_passed_poll.xml
+++ b/app/src/main/res/layout/item_passed_poll.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <data>
+        <variable
+            name="viewModel"
+            type="ru.mos.polls.poll.model.Poll" />
+    </data>
+
     <LinearLayout
         style="@style/item.linear"
         android:background="@drawable/ag_list_selector"
