--- a/app/src/main/res/layout/layout_support.xml
+++ b/app/src/main/res/layout/layout_support.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -32,7 +33,8 @@
                     <EditText
                         android:id="@+id/etEmail"
                         style="@style/input.email"
-                        android:hint="@string/email" />
+                        android:hint="@string/email"
+                        app:onTextChange="@{viewModel::processSendingEnabled}"/>
 
                     <LinearLayout
                         android:id="@+id/subjectContainer"
@@ -78,14 +80,16 @@
                     <EditText
                         android:id="@+id/etMessage"
                         style="@style/input.multiLines"
-                        android:hint="@string/your_message" />
+                        android:hint="@string/your_message"
+                        app:onTextChange="@{viewModel::processSendingEnabled}"/>
 
                     <Button
                         android:id="@+id/btnSendMessage"
                         style="@style/button.centered.match"
                         android:layout_marginTop="@dimen/pd_xlarge"
                         android:enabled="false"
-                        android:text="@string/sendMessage" />
+                        android:text="@string/sendMessage"
+                        app:onClick="@{viewModel::sendMessage}"/>
                 </LinearLayout>
             </ScrollView>
 
