--- a/app/src/main/res/layout/fragment_user_tab_profile.xml
+++ b/app/src/main/res/layout/fragment_user_tab_profile.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:bind="http://schemas.android.com/tools">
+        xmlns:bind="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="viewModel"
-            type="ru.mos.polls.newprofile.vm.UserTabFragmentVM" />
+            type="ru.mos.polls.newprofile.vm.UserTabFragmentVM"/>
 
         <variable
             name="agUser"
-            type="ru.mos.elk.profile.AgUser" />
+            type="ru.mos.elk.profile.AgUser"/>
 
         <variable
             name="clickListener"
-            type="ru.mos.polls.newprofile.vm.AvatarPanelClickListener" />
+            type="ru.mos.polls.newprofile.vm.AvatarPanelClickListener"/>
     </data>
 
 
@@ -24,15 +24,19 @@
             android:id="@+id/progress"
             style="@style/item"
             android:layout_centerInParent="true"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swipe"
             style="@style/root">
 
+
             <android.support.v4.widget.NestedScrollView
                 android:id="@+id/root"
                 style="@style/root"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/progress"
                 android:fillViewport="true">
 
                 <LinearLayout
@@ -50,17 +54,17 @@
                             android:id="@+id/agUser_avatar_panel"
                             layout="@layout/layout_user_avatar_panel"
                             bind:agUser="@{agUser}"
-                            bind:clickListener="@{clickListener}" />
+                            bind:clickListener="@{clickListener}"/>
 
                         <include
                             android:id="@+id/agUser_status_info_panel"
                             layout="@layout/layout_user_status_info"
-                            bind:agUser="@{agUser}" />
+                            bind:agUser="@{agUser}"/>
                     </LinearLayout>
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/agUser_profile_list"
-                        style="@style/item" />
+                        style="@style/item"/>
 
                     <RelativeLayout
                         style="@style/item.linear.horizontal"
@@ -68,7 +72,7 @@
 
                         <TextView
                             style="@style/text.normal.black"
-                            android:text="Профиль виден всем" />
+                            android:text="Профиль виден всем"/>
 
                         <android.support.v7.widget.SwitchCompat
                             android:id="@+id/agUser_profile_visibility"
@@ -77,7 +81,7 @@
                             android:checked="true"
                             android:textOff="@string/empty"
                             android:textOn="@string/empty"
-                            android:thumbTextPadding="@dimen/pd_xlarge" />
+                            android:thumbTextPadding="@dimen/pd_xlarge"/>
                     </RelativeLayout>
                 </LinearLayout>
             </android.support.v4.widget.NestedScrollView>
