--- a/app/src/main/res/layout/layout_friend_profile.xml
+++ b/app/src/main/res/layout/layout_friend_profile.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+        xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <variable
             name="viewModel"
-            type="ru.mos.polls.friend.vm.FriendStatisticFragmentVM" />
+            type="ru.mos.polls.friend.vm.FriendStatisticFragmentVM"/>
     </data>
 
     <RelativeLayout style="@style/root">
@@ -15,7 +15,7 @@
             android:id="@+id/progress"
             style="@style/item"
             android:layout_centerInParent="true"
-            android:visibility="gone" />
+            android:visibility="gone"/>
 
         <android.support.v4.widget.SwipeRefreshLayout
             android:id="@+id/swipe"
@@ -27,7 +27,8 @@
 
                 <RelativeLayout
                     android:id="@+id/root"
-                    style="@style/root">
+                    style="@style/root"
+                    android:background="@color/actionbar_background">
 
                     <LinearLayout
                         android:id="@+id/friend_info_layout"
@@ -36,26 +37,22 @@
                         android:orientation="vertical"
                         android:paddingTop="@dimen/pd_xxlarge">
 
-                        <de.hdodenhof.circleimageview.CircleImageView
-                            android:id="@+id/friend_image"
-                            android:layout_width="@dimen/vs_xnormal"
-                            android:layout_height="@dimen/vs_xnormal"
-                            android:layout_gravity="center"
-                            android:layout_weight="1"
-                            android:src="@drawable/unlogin2"
-                            app:civ_border_color="@color/white"
-                            app:civ_border_width="2dp"
-                            app:layout_constraintTop_toTopOf="parent" />
+                        <include
+                            android:id="@+id/friend_avatar"
+                            layout="@layout/layout_user_avatar"/>
 
                         <include
                             android:id="@+id/friend_status_info_panel"
-                            layout="@layout/layout_user_status_info" />
+                            layout="@layout/layout_user_status_info"/>
                     </LinearLayout>
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/list"
                         style="@style/root"
-                        android:layout_below="@+id/friend_info_layout" />
+                        android:layout_below="@+id/friend_info_layout"
+                        android:background="@color/white"
+                        android:visibility="visible"/>
+
                 </RelativeLayout>
             </android.support.v4.widget.NestedScrollView>
         </android.support.v4.widget.SwipeRefreshLayout>
