--- a/app/src/main/res/layout/layout_user_status_info.xml
+++ b/app/src/main/res/layout/layout_user_status_info.xml
@@ -12,6 +12,7 @@
 
     <LinearLayout
         style="@style/linear"
+        android:id="@+id/agUser_status_layout"
         android:layout_marginBottom="@dimen/pd_normal"
         android:layout_marginTop="@dimen/pd_normal"
         android:background="@color/actionbar_background"
@@ -30,7 +31,6 @@
             style="@style/text.small.white"
             android:layout_gravity="center"
             android:gravity="center_horizontal"
-            android:hint="активный гражданин с 8 июня 2017"
             android:text="@{agUser.getRegistrationDate()}" />
 
         <RelativeLayout
@@ -58,7 +58,6 @@
                 android:layout_marginLeft="@dimen/pd_normal"
                 android:layout_toEndOf="@+id/agUser_achievement_layer"
                 android:layout_toRightOf="@+id/agUser_achievement_layer"
-                android:hint="+0"
                 android:text="@{agUser.getAchievementsCount()}"
                 android:visibility="@{agUser.count > 0 ? View.VISIBLE : View.GONE}" />
         </RelativeLayout>
