--- a/app/src/main/res/layout/fragment_friend_tab.xml
+++ b/app/src/main/res/layout/fragment_friend_tab.xml
@@ -28,6 +28,7 @@
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dp_0"
+            android:background="@color/white"
             android:layout_weight="1">
 
         </android.support.v4.view.ViewPager>
